After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668981 - Compilation of current seahorse 3.3.x fails when setting "-Werror=format-security"
Compilation of current seahorse 3.3.x fails when setting "-Werror=format-secu...
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2012-01-30 01:47 UTC by Gert Kulyk
Modified: 2012-02-04 10:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix the issue (1.76 KB, patch)
2012-01-30 01:47 UTC, Gert Kulyk
none Details | Review

Description Gert Kulyk 2012-01-30 01:47:58 UTC
Created attachment 206388 [details] [review]
Patch to fix the issue

I'm attaching a patch to fix this.
Comment 1 Stef Walter 2012-02-04 10:05:58 UTC
 Thanks. Included in git master.