Fixes for building with -Wformat-security

https://bugzilla.gnome.org/show_bug.cgi?id=668981