pkcs11/seahorse-pkcs11-key-deleter.c
@@ -80,7 +80,7 @@ seahorse_pkcs11_key_deleter_create_confirm (SeahorseDeleter *deleter,
 
 	prompt = g_strdup_printf (_("Are you sure you want to permanently delete %s?"), self->label);
 
-	dialog = seahorse_delete_dialog_new (parent, prompt);
+	dialog = seahorse_delete_dialog_new (parent, "%s", prompt);
 
 	seahorse_delete_dialog_set_check_label (SEAHORSE_DELETE_DIALOG (dialog), _("I understand that this key will be permanently deleted."));
 	seahorse_delete_dialog_set_check_require (SEAHORSE_DELETE_DIALOG (dialog), TRUE);
